Revelation changelog

---------------[ xxxx-xx-xx : 0.4.6 ]---------------

2006-01-18  Erik Grinaker <erikg@codepoet.no>

	* updated the copyright period

	* use correct key path for applet show_passwords gconf key

2006-01-14  Erik Grinaker <erikg@codepoet.no>

	* don't initialize python modules during configure checks

	* remove GNOME_RevelationApplet.server during make clean

	* changed button "Edit" to "Update" in edit entry dialog

---------------[ 2005-08-25 : 0.4.5 ]---------------

2005-08-24  Erik Grinaker <erikg@codepoet.no>

	* added GPass 0.5.x export

	* fixed a bug when importing GPass 0.4.x files with empty note

	* make GPass importer skip hostnames containing only http://

	* GPass importer handles multi-line notes correctly

	* added MyPasswordSafe import/export for old file format

2005-08-23  Erik Grinaker <erikg@codepoet.no>

	* more informative error messages for gnomemisc module

	* check for necessary python modules at configure-time

	* improved the applet name and description

	* added GPass 0.5.x import

2005-08-22  Erik Grinaker <erikg@codepoet.no>

	* added Password Safe 1.x import/export

	* added Password Safe 2.x import/export

	* trimmed labels for doubleclick settings

	* added Password Gorilla import/export

	* added MyPasswordSafe import/export

	* fix crashes in applet and with drag/drop on 64-bit systems

2005-08-17  Erik Grinaker <erikg@codepoet.no>

	* default lock timeout for applet set to 10 minutes

	* don't use unnecessary defsfiles when building gnomemisc module

	* encode data as Unicode when loading from files

	* fix crash when searching with non-Unicode locale

2005-08-09  Erik Grinaker <erikg@codepoet.no>

	* fix incorrect magic string in MIME-type entry

	* set correct app version in datafile header

	* bumped version number to 0.4.5

---------------[ 2005-08-07 : 0.4.4 ]---------------

2005-08-06  Erik Grinaker <erikg@codepoet.no>

	* moved unique dialog system to dialog module
