@@ -1,6 +1,9 @@
 xxxx-xx-xx: Revelation 0.4.6
 ============================
 
+New features:
+- new applet option to show/hide search entry
+
 Bugfixes:
 - don't initialize python modules during configure checks
 - changed button "Edit" to "Update" in edit entry dialog
